--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <title>Vue_practice</title>
+    <script src="vue.js"></script>
 </head>
 <body>
-<script src="https://cdn.jsdelivr.net/npm/vue@2.5.16/dist/vue.js">
-</script>
     <div id="app">
-        <input type="text" v-on:input='changeTitle'>
-        <p>{{ title }}</p>
+        <h1 v-once>{{ title }}</h1>
+        <p>{{ sayHello() }} - <a :href="link">Google</a></p>
+        <p v-html="finishedLink"></p>
     </div>
 <script src="index.js"></script>
 </body>
