add file 加算を追加

--- a/sample/1/index.html
+++ b/sample/1/index.html
@@ -2,8 +2,8 @@
 <html lang="ja">
 <head>
     <meta charset="UTF-8">
-    <title>Vue_practice</title>
-    <script src="vue.js"></script>
+    <title>Vue_practice1</title>
+    <script src="../../vue.js"></script>
 </head>
 <body>
     <div id="app">
