--- a/sample/2/index.html
+++ b/sample/2/index.html
@@ -8,8 +8,24 @@
 <body>
 <div id="app">
     <h1>{{ title }}</h1>
-    <button v-on:click="increase">Click me</button>
-    <p>{{ counter }}</p>
+    <button v-on:click="increase(2, $event)">Click me</button>
+    <button v-on:click="counter++">Click me</button>
+    <p>{{ counter * 2 > 10 ? 'G than 10': 'S than 10' }}</p>
+    <p v-on:mousemove="updateCoordinates">
+        Coordinates: {{ x }} / {{ y }}
+        - <span v-on:mousemove.stop>DEAD</span>
+    </p>
+    <div>
+        <button v-on:click="alertMe">Click ME</button>
+    </div>
+    <div>
+        <input type="text" v-on:keydown="value= $event.target.value">
+        <p>{{ value }}</p>
+    </div>
+    <div>
+        <input type="text" v-on:keydown.enter="value= $event.target.value">
+        <p>{{ value }}</p>
+    </div>
 </div>
 <script src="index.js"></script>
 </body>
