--- a/sample/5/index.html
+++ b/sample/5/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <title>Vue_practice</title>
   <script src="../../vue.js"></script>
-<link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <div id="app">
@@ -14,7 +14,9 @@
       :class="divClasses"
       ></div>
       <div class="demo"></div>
-      <div class="demo"></div>
+      <div class="demo" :class="color"></div>
+    <hr>
+    <input type="text" v-model="color">
   </div>
 <script src="index.js"></script>
 </body>
